# fp_hw

./: .gitignore  README.md  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Battle.hs  H1.hs  H2.hs  H3.hs  H4.hs  H5.hs  Tree.hs
hw2/: hw2.cabal
hw2/src/: H1.hs  H2.hs  H3.hs  H3Classes.hs  H4.hs
hw2/test/: H1Spec.hs  H2Spec.hs  H4Spec.hs
