name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/username/TemplateHW/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          example@gmail.com
copyright:           2017 Your Name

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     H1, H2, H3, H4, H5
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw1
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
